# htm-achievements

./: .envrc  .gitignore  Makefile  README.md  TODO  dev.docker-compose.yaml  docker-compose.dev.yaml  docker-compose.yaml  example.env
.github/workflows/: docker-publish.yml
achiever/: Dockerfile  setup.cfg
achiever/app/: db.py  main.py  models.py  schemas.py
admin/: Dockerfile  package.json
admin/src/: API.js  App.js  AuthProvider.js  Config.js  CoreDataProvider.js  Layout.js  index.css
admin/src/components/: Achievements.js  PendingAchievements.js  Users.js
admin/src/hooks/: useTheme.js
admin/src/pages/: LoginPage.js
admin/src/providers/: AchievementDataProvider.js  AuthProvider.js  DataProvider.js  Helpers.js  PendingAchievementDataProvider.js  (+1 more)
api/: .dockerignore  Dockerfile  README.md  prestart.sh  pyproject.toml  setup.cfg
api/app/: config.py  crud.py  db.py  main.py  models.py  schemas.py  validate.py
api/app/routers/: achievements.py  auth.py  users.py
api/htm_achiever/: crud.py  dependencies.py  main.py  models.py
api/htm_achiever/routers/: achievements.py  auth.py  external.py  users.py
dev/: autoformat.sh  check.sh  install_git_hooks.sh
postgres/: Dockerfile  api.sh
template/: index.html
terraform/: .envrc  .gitignore  .terraform.lock.hcl  cloudflare.tf  data.tf  hcloud.tf  init.tf  outputs.tf  variables.tf
terraform/scripts/: install-docker.sh
terraform/templates/: env  user-data.yaml
traefik/config/: middlewares.yaml  tls.yaml
web/: Dockerfile  nginx.conf  package.json
web/src/: API.js  App.js  Config.js  index.css
(+3 files in other folders)
