[tool.poetry]
name = "htm_achiever"
version = "0.1.0"
description = ""
authors = ["Charles de Freitas <me@chasbob.dev>"]

[tool.poetry.dependencies]
python = "^3.9"
SQLAlchemy = "^1.4.25"
fastapi = "^0.68.1"
psycopg2 = "^2.9.1"
Authlib = "^0.15.4"
httpx = "^0.19.0"
itsdangerous = "^2.0.1"

[tool.poetry.dev-dependencies]
build = "^0.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
db-init = 'htm_achiever.models:init'
