# [metadata]
# name = htm_achiever
# description = Backend achievement system
# license = MIT License
#
# [options]
# packages = find:
# install_requires =
    # fastapi
    # SQLAlchemy
    # psycopg2
    # authlib
    # httpx
    # Starlette
    # itsdangerous
#
# [options.extras_require]
# dev = SQLAlchemy[mypy]
#
# [mypy]
# plugins = sqlalchemy.ext.mypy.plugin
#
# [mypy-authlib.*]
# ignore_missing_imports = True
